--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="col-md-4">
             <div class="form-group row">
                 <div class="col-md-8"><br>
-                    <label><strong>CNPJ</strong></label> 
+                    <label><strong>Consulta CNPJ</strong></label> 
                     <input type="text" id="consultar_cnpj" onblur="consultaCnpj(this.value)" data-mask="00.000.000/0000-00" class="form-control" placeholder="Digite aqui o CNPJ." >
                 </div>
                 <div class="col-md-3"> <br> <br> 
